Kt 504 (#151)
* db layer and storage layer complete

* feature: update the handler with the endpoint

* update the swagger docs request and response

* fix: update the audit and tidy on the local

* remove unnecesary logs

* add test to mock scan on handler

* update the test handler with mock funciotns

* update the test cases for 402, 409 and 404 related with getAssetsById

* fix: update the tidy and audit locally
